css/detail-topics-sidebar - Fix detail page (not responsive yet)

--- a/client/src/pages/detail/Detail.css
+++ b/client/src/pages/detail/Detail.css
@@ -1,75 +1,87 @@
-/* * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+.detail-page {
+  padding: 10% 0 0 0;
 }
 
-.Appct {
-  height: 100vh;
-  color: #000;
+.detail-page-bg {
+  opacity: 0.3;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
-.chung {
+.detail-page-container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
-.chung li {
-  display: inline-block;
+.detail-page-title {
+  margin-bottom: 50px;
+  font-size: 40px;
+  font-weight: 900;
+  border-bottom: 4px solid black;
+  padding: 5px 20px;
 }
 
-#dn {
-  font-size: 14px;
-  line-height: 46px;
-}
-
-.slider {
-  text-align: right;
-  margin-top: 46px;
-  margin-right: 70rem;
-}
-
-a {
-  color: blue;
-}
-
-.form {
+.detail-page-main-content {
+  display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
-  border-radius: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: fit-content;
-  width: 40rem;
+  gap: 30px;
 }
 
-.img {
-  border-radius: 24px;
-  width: 100%;
+.detail-page-image {
+  width: 400px;
+  height: 400px;
+  border-radius: 5px;
+  object-fit: cover;
 }
 
-.Appct .input {
-  width: 100%;
+.detail-page .form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.Appct .btn:hover {
-  background: #000;
+.detail-page .input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  min-width: 400px;
 }
 
-.btntv {
-  width: 24px;
-  height: 24px;
-  background-color: #000;
-  color: #fff;
-  border-radius: 50%;
-  cursor: pointer;
+.detail-page .input-label {
+  color: #000000;
+  font-size: 20px;
+  line-height: 24px;
   text-align: center;
-  margin-right: 20px;
-  margin-top: 10px;
 }
 
-label {
-  font-weight: bold;
-  color: #000;
-} */
+.detail-page .input-control {
+  margin: 0;
+  padding: 10px;
+  border-radius: 3px;
+  border-top-left-radius: 3px !important;
+  border-bottom-left-radius: 3px !important;
+}
+
+.detail-page .form-btn-submit {
+  background: black;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  margin-top: 20px;
+}
+
+@media (min-width: 1440px) {
+  .detail-page-main-content {
+    gap: 10%;
+  }
+}
